hyc-examples/tests/variables/invalid/missing-colon-mutable.hyc
some_mutable_var ! i32;
